compiler/frontend/.antlr/HelParser.java
// Generated from /Users/liviualexandrubobocu/Desktop/Calculator/hel.language/compiler/frontend/Hel.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class HelParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, WS=23, WORD=24, NUMBER=25, 
		TIME=26, STRING=27, IF=28, EVERY=29, REMEMBER=30, USE=31, FAILS=32, NOTIFY=33, 
		AT=34, FOR=35, TO=36, ME=37, MORNING=38, AM=39, PM=40, AND=41, OR=42, 
		NOT=43, CREATE=44, READ=45, UPDATE=46, DELETE=47, WITH=48, HAVING=49, 
		FUNCTION=50, LIST=51, DICT=52, LET=53, WHILE=54, IMMUTABLE=55, TIME_SPEC=56, 
		ATTRIBUTE=57, VARIABLE=58, TYPE=59, MATCH=60, CASE=61;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_basicCommand = 2, RULE_conditionalCommand = 3, 
		RULE_variableAssignment = 4, RULE_conditionExpr = 5, RULE_condition = 6, 
		RULE_loopCommand = 7, RULE_interval = 8, RULE_rememberCommand = 9, RULE_errorHandlingCommand = 10, 
		RULE_customErrorHandling = 11, RULE_interactiveCommand = 12, RULE_complexTask = 13, 
		RULE_subtask = 14, RULE_contextAwareCommand = 15, RULE_modularTaskDefinition = 16, 
		RULE_modularTaskExecution = 17, RULE_timeSpecification = 18, RULE_thatStatement = 19, 
		RULE_dialog = 20, RULE_dialogStep = 21, RULE_contextCommand = 22, RULE_userCommand = 23, 
		RULE_agentCommand = 24, RULE_crudCommand = 25, RULE_entity = 26, RULE_functionDefinition = 27, 
		RULE_functionCall = 28, RULE_parameter = 29, RULE_argument = 30, RULE_expression = 31, 
		RULE_listDeclaration = 32, RULE_dictionaryDeclaration = 33, RULE_element = 34, 
		RULE_keyValuePair = 35, RULE_genericType = 36, RULE_patternMatching = 37, 
		RULE_patternCase = 38, RULE_pattern = 39;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "basicCommand", "conditionalCommand", "variableAssignment", 
			"conditionExpr", "condition", "loopCommand", "interval", "rememberCommand", 
			"errorHandlingCommand", "customErrorHandling", "interactiveCommand", 
			"complexTask", "subtask", "contextAwareCommand", "modularTaskDefinition", 
			"modularTaskExecution", "timeSpecification", "thatStatement", "dialog", 
			"dialogStep", "contextCommand", "userCommand", "agentCommand", "crudCommand", 
			"entity", "functionDefinition", "functionCall", "parameter", "argument", 
			"expression", "listDeclaration", "dictionaryDeclaration", "element", 
			"keyValuePair", "genericType", "patternMatching", "patternCase", "pattern"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "','", "':'", "'='", "'('", "';'", "')'", "'{'", "'}'", 
			"'minutes'", "'hours'", "'-'", "'Define'", "'Execute'", "'User:'", "'Agent:'", 
			"'?'", "'['", "']'", "'<'", "'>'", "'=>'", null, null, null, null, null, 
			"'If'", "'Every'", "'Remember'", "'Use'", "'If fails, notify'", "'notify'", 
			"'at'", "'for'", "'to'", "'me'", "'morning'", "'AM'", "'PM'", "'AND'", 
			"'OR'", "'NOT'", "'Create'", "'Read'", "'Update'", "'Delete'", "'with'", 
			"'having'", "'function'", "'List'", "'Dict'", "'let'", "'while'", "'const'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "WS", 
			"WORD", "NUMBER", "TIME", "STRING", "IF", "EVERY", "REMEMBER", "USE", 
			"FAILS", "NOTIFY", "AT", "FOR", "TO", "ME", "MORNING", "AM", "PM", "AND", 
			"OR", "NOT", "CREATE", "READ", "UPDATE", "DELETE", "WITH", "HAVING", 
			"FUNCTION", "LIST", "DICT", "LET", "WHILE", "IMMUTABLE", "TIME_SPEC", 
			"ATTRIBUTE", "VARIABLE", "TYPE", "MATCH", "CASE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Hel.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HelParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(HelParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(80);
				statement();
				}
				}
				setState(83); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 71195613177372672L) != 0) );
			setState(85);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public BasicCommandContext basicCommand() {
			return getRuleContext(BasicCommandContext.class,0);
		}
		public ConditionalCommandContext conditionalCommand() {
			return getRuleContext(ConditionalCommandContext.class,0);
		}
		public LoopCommandContext loopCommand() {
			return getRuleContext(LoopCommandContext.class,0);
		}
		public RememberCommandContext rememberCommand() {
			return getRuleContext(RememberCommandContext.class,0);
		}
		public ErrorHandlingCommandContext errorHandlingCommand() {
			return getRuleContext(ErrorHandlingCommandContext.class,0);
		}
		public InteractiveCommandContext interactiveCommand() {
			return getRuleContext(InteractiveCommandContext.class,0);
		}
		public ComplexTaskContext complexTask() {
			return getRuleContext(ComplexTaskContext.class,0);
		}
		public ContextAwareCommandContext contextAwareCommand() {
			return getRuleContext(ContextAwareCommandContext.class,0);
		}
		public ModularTaskDefinitionContext modularTaskDefinition() {
			return getRuleContext(ModularTaskDefinitionContext.class,0);
		}
		public ModularTaskExecutionContext modularTaskExecution() {
			return getRuleContext(ModularTaskExecutionContext.class,0);
		}
		public CrudCommandContext crudCommand() {
			return getRuleContext(CrudCommandContext.class,0);
		}
		public FunctionDefinitionContext functionDefinition() {
			return getRuleContext(FunctionDefinitionContext.class,0);
		}
		public ListDeclarationContext listDeclaration() {
			return getRuleContext(ListDeclarationContext.class,0);
		}
		public DictionaryDeclarationContext dictionaryDeclaration() {
			return getRuleContext(DictionaryDeclarationContext.class,0);
		}
		public VariableAssignmentContext variableAssignment() {
			return getRuleContext(VariableAssignmentContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(102);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				basicCommand();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				conditionalCommand();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				loopCommand();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(90);
				rememberCommand();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(91);
				errorHandlingCommand();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(92);
				interactiveCommand();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(93);
				complexTask();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(94);
				contextAwareCommand();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(95);
				modularTaskDefinition();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(96);
				modularTaskExecution();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(97);
				crudCommand();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(98);
				functionDefinition();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(99);
				listDeclaration();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(100);
				dictionaryDeclaration();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(101);
				variableAssignment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BasicCommandContext extends ParserRuleContext {
		public List<TerminalNode> WORD() { return getTokens(HelParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(HelParser.WORD, i);
		}
		public BasicCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_basicCommand; }
	}

	public final BasicCommandContext basicCommand() throws RecognitionException {
		BasicCommandContext _localctx = new BasicCommandContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_basicCommand);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(104);
				match(WORD);
				}
				}
				setState(107); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WORD );
			setState(109);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConditionalCommandContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(HelParser.IF, 0); }
		public ConditionExprContext conditionExpr() {
			return getRuleContext(ConditionExprContext.class,0);
		}
		public BasicCommandContext basicCommand() {
			return getRuleContext(BasicCommandContext.class,0);
		}
		public ConditionalCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionalCommand; }
	}

	public final ConditionalCommandContext conditionalCommand() throws RecognitionException {
		ConditionalCommandContext _localctx = new ConditionalCommandContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_conditionalCommand);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(IF);
			setState(112);
			conditionExpr();
			setState(113);
			match(T__1);
			setState(114);
			basicCommand();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableAssignmentContext extends ParserRuleContext {
		public TerminalNode VARIABLE() { return getToken(HelParser.VARIABLE, 0); }
		public TerminalNode TYPE() { return getToken(HelParser.TYPE, 0); }
		public TerminalNode LET() { return getToken(HelParser.LET, 0); }
		public TerminalNode IMMUTABLE() { return getToken(HelParser.IMMUTABLE, 0); }
		public TerminalNode WORD() { return getToken(HelParser.WORD, 0); }
		public TerminalNode NUMBER() { return getToken(HelParser.NUMBER, 0); }
		public TerminalNode STRING() { return getToken(HelParser.STRING, 0); }
		public VariableAssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableAssignment; }
	}

	public final VariableAssignmentContext variableAssignment() throws RecognitionException {
		VariableAssignmentContext _localctx = new VariableAssignmentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variableAssignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			_la = _input.LA(1);
			if ( !(_la==LET || _la==IMMUTABLE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(117);
			match(VARIABLE);
			setState(118);
			match(T__2);
			setState(119);
			match(TYPE);
			setState(120);
			match(T__3);
			setState(121);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 184549376L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(122);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConditionExprContext extends ParserRuleContext {
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(HelParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(HelParser.AND, i);
		}
		public List<TerminalNode> OR() { return getTokens(HelParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(HelParser.OR, i);
		}
		public TerminalNode NOT() { return getToken(HelParser.NOT, 0); }
		public ConditionExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionExpr; }
	}

	public final ConditionExprContext conditionExpr() throws RecognitionException {
		ConditionExprContext _localctx = new ConditionExprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_conditionExpr);
		int _la;
		try {
			setState(134);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WORD:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				condition();
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==AND || _la==OR) {
					{
					{
					setState(125);
					_la = _input.LA(1);
					if ( !(_la==AND || _la==OR) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(126);
					condition();
					}
					}
					setState(131);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case NOT:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				match(NOT);
				setState(133);
				condition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConditionContext extends ParserRuleContext {
		public List<TerminalNode> WORD() { return getTokens(HelParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(HelParser.WORD, i);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_condition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(136);
				match(WORD);
				}
				}
				setState(139); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WORD );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LoopCommandContext extends ParserRuleContext {
		public TerminalNode EVERY() { return getToken(HelParser.EVERY, 0); }
		public IntervalContext interval() {
			return getRuleContext(IntervalContext.class,0);
		}
		public BasicCommandContext basicCommand() {
			return getRuleContext(BasicCommandContext.class,0);
		}
		public TerminalNode FOR() { return getToken(HelParser.FOR, 0); }
		public List<VariableAssignmentContext> variableAssignment() {
			return getRuleContexts(VariableAssignmentContext.class);
		}
		public VariableAssignmentContext variableAssignment(int i) {
			return getRuleContext(VariableAssignmentContext.class,i);
		}
		public ConditionExprContext conditionExpr() {
			return getRuleContext(ConditionExprContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode WHILE() { return getToken(HelParser.WHILE, 0); }
		public LoopCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loopCommand; }
	}

	public final LoopCommandContext loopCommand() throws RecognitionException {
		LoopCommandContext _localctx = new LoopCommandContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_loopCommand);
		int _la;
		try {
			setState(174);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EVERY:
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				match(EVERY);
				setState(142);
				interval();
				setState(143);
				match(T__1);
				setState(144);
				basicCommand();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 2);
				{
				setState(146);
				match(FOR);
				setState(147);
				match(T__4);
				setState(148);
				variableAssignment();
				setState(149);
				match(T__5);
				setState(150);
				conditionExpr();
				setState(151);
				match(T__5);
				setState(152);
				variableAssignment();
				setState(153);
				match(T__6);
				setState(154);
				match(T__7);
				setState(156); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(155);
					statement();
					}
					}
					setState(158); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 71195613177372672L) != 0) );
				setState(160);
				match(T__8);
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 3);
				{
				setState(162);
				match(WHILE);
				setState(163);
				match(T__4);
				setState(164);
				conditionExpr();
				setState(165);
				match(T__6);
				setState(166);
				match(T__7);
				setState(168); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(167);
					statement();
					}
					}
					setState(170); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 71195613177372672L) != 0) );
				setState(172);
				match(T__8);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IntervalContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(HelParser.NUMBER, 0); }
		public TerminalNode TIME_SPEC() { return getToken(HelParser.TIME_SPEC, 0); }
		public IntervalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interval; }
	}

	public final IntervalContext interval() throws RecognitionException {
		IntervalContext _localctx = new IntervalContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_interval);
		int _la;
		try {
			setState(185);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NUMBER) {
					{
					setState(176);
					match(NUMBER);
					}
				}

				setState(179);
				match(T__9);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(181);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NUMBER) {
					{
					setState(180);
					match(NUMBER);
					}
				}

				setState(183);
				match(T__10);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(184);
				match(TIME_SPEC);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RememberCommandContext extends ParserRuleContext {
		public TerminalNode REMEMBER() { return getToken(HelParser.REMEMBER, 0); }
		public ThatStatementContext thatStatement() {
			return getRuleContext(ThatStatementContext.class,0);
		}
		public RememberCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rememberCommand; }
	}

	public final RememberCommandContext rememberCommand() throws RecognitionException {
		RememberCommandContext _localctx = new RememberCommandContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_rememberCommand);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			match(REMEMBER);
			setState(188);
			thatStatement();
			setState(189);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ErrorHandlingCommandContext extends ParserRuleContext {
		public BasicCommandContext basicCommand() {
			return getRuleContext(BasicCommandContext.class,0);
		}
		public TerminalNode FAILS() { return getToken(HelParser.FAILS, 0); }
		public TerminalNode NOTIFY() { return getToken(HelParser.NOTIFY, 0); }
		public TerminalNode ME() { return getToken(HelParser.ME, 0); }
		public CustomErrorHandlingContext customErrorHandling() {
			return getRuleContext(CustomErrorHandlingContext.class,0);
		}
		public ErrorHandlingCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_errorHandlingCommand; }
	}
